// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB7PBVEqyt49BBQSgtqGGwWjw8qf8G93G40yvnJ2Qhz3Czu",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 6,
        "errorMessage": "Invalid opcode",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQB7PBVEqyt49BBQSgtqGGwWjw8qf8G93G40yvnJ2Qhz3Czu",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.992559",
        },
      },
    ],
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Increment",
              "key": 0n,
              "value": -1232n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB7PBVEqyt49BBQSgtqGGwWjw8qf8G93G40yvnJ2Qhz3Czu",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6004n,
      },
    ],
  },
]
`;
